--- a/LetterSectionList/res/values/styles.xml
+++ b/LetterSectionList/res/values/styles.xml
@@ -17,4 +17,10 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
+    <style name="LetterSectionListItem" parent="@android:style/TextAppearance.Medium">        
+        <item name="android:paddingLeft">5dp</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:background">#898989</item>
+    </style>
+    
 </resources>
